--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -11,7 +11,7 @@ on:
 
 jobs:
     codeql:
-        if: github.actor != 'dependabot[bot]' || github.actor != 'protected-auto-commits[bot]'
+        if: github.actor != 'dependabot[bot]' || github.actor != 'github-actions[bot]' || github.actor != 'protected-auto-commits[bot]'
         name: CodeQL
         runs-on: ubuntu-latest
         permissions:
@@ -81,7 +81,7 @@ jobs:
             run: |
                 python -m pip install --upgrade pip
                 pip install pylint
-                pylint_output=$(pylint api tests || true)
+                pylint_output=$(pylint --recursive=y api || true)
                 echo "$pylint_output"
 
                 score=$(echo "$pylint_output" | grep -oP 'Your code has been rated at \K[0-9]+\.[0-9]+' || echo "0.0")
