--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "setuptools.build_meta"
 [project]
 name = "wakatime-leaderboards"
 dynamic = ["version"]
-description = "Automated WakaTime leaderboards for GitHub profiles"
+description = "Automated WakaTime leaderboards for your GitHub profile"
 readme = "README.md"
 requires-python = ">=3.7"
 license = {file = "LICENSE"}
@@ -45,10 +45,13 @@ commit_version_number = true
 commit_message = "chore(release): Version Release {version}"
 upload_to_pypi = false
 branch = "master"
+upload_to_release = true
+commit_parser = "angular"
+major_on_zero = false
 
 [tool.semantic_release.changelog]
-template_dir = "templates"
 changelog_file = "CHANGELOG.md"
+changelog_template = "changelog_template.md"
 
 [tool.semantic_release.commit_parser_options]
 allowed_tags = [
