fix: correct the commit msg & table docs: update issue template ci: run pylint for all files
BREAKING CHANGE: Wakatime Leaderboards

--- a/.github/ISSUE_TEMPLATE/bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/bug-report.yml
@@ -1,5 +1,5 @@
 name: Bug Report
-description: Report a bug to help me improve Steam Stats
+description: Report a bug to help me improve Wakatime Leaderboards
 title: "Bug:"
 labels: ["bug"]
 assignees: "nicconike"
