--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -4,5 +4,5 @@ contact_links:
       url: https://discord.gg/UbetHfu
       about: You can join or create new discussions on Discord.
     - name: Script does not work
-      url: https://github.com/nicconike/steam-stats/blob/master/CONTRIBUTING.md
+      url: https://github.com/Nicconike/Wakatime-Leaderboards/blob/master/.github/CONTRIBUTING.md
       about: Before opening a new issue, please make sure to read CONTRIBUTING.md
