--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -81,7 +81,7 @@ jobs:
             run: |
                 python -m pip install --upgrade pip
                 pip install pylint
-                pylint_output=$(pylint --recursive=y api || true)
+                pylint_output=$(pylint --recursive=y api tests || true)
                 echo "$pylint_output"
 
                 score=$(echo "$pylint_output" | grep -oP 'Your code has been rated at \K[0-9]+\.[0-9]+' || echo "0.0")
