ci: update workflow
BREAKING CHANGE: Release Major Version

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -15,7 +15,7 @@ jobs:
         name: Codecov
         runs-on: ubuntu-latest
         steps:
-          - name: Checkout
+          - name: Checkout Repo
             uses: actions/checkout@v4
 
           - name: Setup Python
