--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ Homepage = "https://github.com/nicconike/wakatime-leaderboards"
 
 [tool.semantic_release]
 version_variables = ["api/main.py:__version__"]
+tag_format = "v{version}"
 commit_version_number = true
 commit_message = "chore: Version Release {version}"
 upload_to_pypi = false
