--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,6 +16,7 @@ jobs:
         runs-on: ubuntu-latest
         concurrency: release
         permissions:
+            id-token: write
             contents: write
             issues: write
             pull-requests: write
