--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -13,12 +13,8 @@ on:
 
 jobs:
     update-readme:
-        if: >
-            github.event_name != 'pull_request' &&
-            github.actor != 'dependabot[bot]' &&
-            github.actor != 'github-actions[bot]' &&
-            github.actor != 'protected-auto-commits[bot]'
         name: Wakatime Leaderboards
+        if: github.actor != 'dependabot[bot]' || github.actor != 'github-actions[bot]' || github.actor != 'protected-auto-commits[bot]'
         runs-on: ubuntu-latest
         steps:
           - name: GitHub App Token
