--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,7 +52,7 @@ jobs:
           - name: Install Dependencies
             run: |
                 python -m pip install --upgrade pip
-                pip install python-semantic-release build
+                pip install python-semantic-release
 
           - name: Semantic Release
             uses: python-semantic-release/python-semantic-release@v9.8.6
