--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,10 +23,8 @@ dev = [
     "pylint==3.2.6",
 ]
 test = [
-    "pytest-asyncio==0.23.8",
     "pytest-cov==5.0.0",
-    "pytest-mock==3.14.0",
-    "requests-mock==1.12.1"
+    "pytest-mock==3.14.0"
 ]
 
 [project.urls]
