fix: correctly display the country rank

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,6 @@ authors = [
 ]
 dynamic = "version_variables"
 dependencies = [
-    "requests==2.32.3",
     "PyGithub==2.3.0",
     "python-semantic-release==9.8.6"
 ]
@@ -21,6 +20,7 @@ dependencies = [
 [project.optional-dependencies]
 dev = [
     "pylint==3.2.6",
+    "pipdeptree==2.23.1",
 ]
 test = [
     "pytest-cov==5.0.0",
