--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -80,7 +80,7 @@ jobs:
             id: run-pylint
             run: |
                 python -m pip install --upgrade pip
-                pip install pylint
+                pip install -r requirements.txt
                 pylint_output=$(pylint --recursive=y api tests || true)
                 echo "$pylint_output"
 
