--- a/.github/workflows/bandit.yml
+++ b/.github/workflows/bandit.yml
@@ -13,7 +13,10 @@ on:
 
 jobs:
     sast_scan:
-        if: github.actor != 'dependabot[bot]' || github.actor != 'github-actions[bot]' || github.actor != 'protected-auto-commits[bot]'
+        if: |
+            github.actor != 'dependabot[bot]' &&
+            github.actor != 'github-actions[bot]' &&
+            github.actor != 'protected-auto-commits[bot]'
         name: Bandit Scan
         runs-on: ubuntu-latest
 
