--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -98,15 +98,22 @@ jobs:
                 username: ${{ vars.DOCKER_USERNAME }}
                 password: ${{ secrets.DOCKER_TOKEN }}
 
+          - name: Login to GitHub Container Registry
+            uses: docker/login-action@v3
+            with:
+                registry: ghcr.io
+                username: ${{ github.actor }}
+                password: ${{ secrets.GITHUB_TOKEN }}
+
           - name: Extract Docker Metadata
             id: meta
             uses: docker/metadata-action@v5
             with:
                 images: ${{ vars.DOCKER_USERNAME }}/wakatime-leaderboards
+                    ghcr.io/${{ github.repository_owner }}/Wakatime-Leaderboards
                 tags: |
-                    type=ref,event=branch
-                    type=ref,event=pr
                     type=semver,pattern={{version}}
+                    type=ref,event=tag,pattern={{tag}}
                     type=sha
 
           - name: Build & Push Docker Image
