--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -35,7 +35,6 @@ jobs:
             uses: actions/checkout@v4
             with:
                 fetch-depth: 0
-                fetch-tags: true
                 token: ${{ steps.app-token.outputs.token }}
 
           - name: Set up Python
@@ -78,10 +77,19 @@ jobs:
             cancel-in-progress: ${{ github.ref != 'refs/heads/master' }}
         needs: release
         steps:
+          - name: GitHub App Token
+            uses: actions/create-github-app-token@v1
+            id: app-token
+            with:
+                app-id: ${{ secrets.GH_APP_ID }}
+                private-key: ${{ secrets.GH_PRIVATE_KEY }}
+
           - name: Checkout Repo
             uses: actions/checkout@v4
             with:
                 fetch-depth: 0
+                fetch-tags: true
+                token: ${{ steps.app-token.outputs.token }}
 
           - name: Install CoSign
             if: github.event_name != 'pull_request'
@@ -112,8 +120,11 @@ jobs:
                 images: ${{ vars.DOCKER_USERNAME }}/wakatime-leaderboards
                     ghcr.io/${{ github.repository_owner }}/Wakatime-Leaderboards
                 tags: |
+                    type=ref,event=branch
+                    type=ref,event=pr
                     type=semver,pattern={{version}}
-                    type=ref,event=tag,pattern={{tag}}
+                    type=semver,pattern={{major}}.{{minor}}
+                    type=semver,pattern={{major}}
                     type=sha
 
           - name: Build & Push Docker Image
@@ -124,8 +135,7 @@ jobs:
                 sbom: ${{ github.event_name != 'pull_request' }}
                 push: ${{ github.event_name != 'pull_request' }}
                 load: ${{ github.event_name == 'pull_request' }}
-                tags: |
-                    ${{ vars.DOCKER_USERNAME }}/wakatime-leaderboards:latest
+                tags: ${{ steps.meta.outputs.tags }}
                 labels: ${{ steps.meta.outputs.labels }}
                 cache-from: type=gha
                 cache-to: type=gha,mode=max
