--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -117,7 +117,8 @@ jobs:
             id: meta
             uses: docker/metadata-action@v5
             with:
-                images: ${{ vars.DOCKER_USERNAME }}/wakatime-leaderboards
+                images: |
+                    ${{ vars.DOCKER_USERNAME }}/wakatime-leaderboards
                     ghcr.io/${{ github.repository_owner }}/Wakatime-Leaderboards
                 tags: |
                     type=ref,event=branch
@@ -140,6 +141,8 @@ jobs:
                 cache-from: type=gha
                 cache-to: type=gha,mode=max
                 file: Dockerfile
+                secrets: |
+                    GITHUB_TOKEN=${{ steps.app-token.outputs.token }}
 
           - name: Sign the published Docker Image
             if: ${{ github.event_name != 'pull_request' }}
