--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -176,7 +176,7 @@ jobs:
 
     cleanup:
         runs-on: ubuntu-latest
-        needs: packages
+        needs: docker
         permissions:
             contents: read
             packages: write
