--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -35,7 +35,7 @@ jobs:
                 pip install -r requirements.txt
 
           - name: Run tests with coverage
-            run: pytest --cov=api.utils --cov-report=xml --cov-report=term-missing
+            run: pytest --cov=api --cov-report=xml --cov-report=term-missing
             env:
                 INPUT_WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
                 GITHUB_REPOSITORY: ${{ github.repository }}
