chore: update action.yml ci: constraint docker publish to only linux/amd64

--- a/action.yml
+++ b/action.yml
@@ -11,7 +11,7 @@ inputs:
         required: true
 runs:
     using: docker
-    image: "docker://nicconike/wakatime-leaderboards:latest"
+    image: "docker://nicconike/wakatime-leaderboards:master"
 branding:
     icon: activity
     color: blue
