--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -60,7 +60,7 @@ jobs:
                 python -m pip install --upgrade pip
                 pip install python-semantic-release
 
-          - name: Setup Git
+          - name: Update to Latest Commit
             run: |
                 git fetch origin
                 git reset --hard origin/${{ github.ref_name }}
@@ -105,10 +105,10 @@ jobs:
             with:
                 cosign-release: 'v2.4.0'
 
-          - name: Set up Docker Buildx
+          - name: Setup Docker Buildx
             uses: docker/setup-buildx-action@v3
 
-          - name: Log in to Docker Hub
+          - name: Login to Docker Hub
             uses: docker/login-action@v3
             with:
                 username: ${{ vars.DOCKER_USERNAME }}
