--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ dynamic = ["version"]
 dependencies = ["PyGithub==2.5.0", "python-semantic-release==9.16.1"]
 
 [project.optional-dependencies]
-dev = ["pylint==3.3.3", "pipdeptree==2.24.0"]
+dev = ["bandit==1.8.2", "pylint==3.3.3", "pipdeptree==2.24.0"]
 test = ["pytest-cov==6.0.0"]
 
 [project.urls]
