fix: Update Dockerfile for improved permissions and user setup tests: update unit tests to use mock env vars & remove assert

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
             issues: write
             pull-requests: write
         outputs:
-            new_release_version: ${{ steps.semantic.outputs.version }}
+            new_release_version: ${{ steps.semantic.outputs.new_release_version }}
         steps:
           - name: GitHub App Token
             uses: actions/create-github-app-token@v1
@@ -70,11 +70,13 @@ jobs:
             id: semantic
             with:
                 github_token: ${{ steps.app-token.outputs.token }}
+            env:
+                PYTHON_KEYRING_BACKEND: keyring.backends.null.Keyring
 
     docker:
         name: Docker
         runs-on: ubuntu-latest
-        if: needs.semantic-release.outputs.new_release_version != ''
+        if: needs.release.outputs.new_release_version != ''
         permissions:
             contents: read
             attestations: write
